# prioritask

./: .coverage  .coveragerc  .env  .env.example  .gitignore  LICENSE  README.md  alembic.ini  package-lock.json  prioritask.db  pyproject.toml  render.yaml  requirements-dev.txt
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: auth.py  rooms.py  tags.py  tasks.py  tasks_ai.py  users.py
app/core/: config.py
app/db/: session.py
app/db/migrations/: env.py
app/models/: __init__.py  ai_usage.py  enums.py  room.py  tag.py  task.py  task_assignment.py  task_tag.py  user.py
app/schemas/: history.py  response_examples.py  responses.py  room.py  tag.py  task.py  user.py
app/services/: auth.py  intelligence.py  task_assignment.py
app/services/AI/: priority_classifier.py  reformulator.py  task_organizer.py
prioritask-frontend/: README.md  package-lock.json  package.json  vite.config.ts
prioritask-frontend/src/: App.tsx  api.ts  index.css
prioritask-frontend/src/auth/: Login.module.css  Login.tsx  Register.tsx
prioritask-frontend/src/components/: AssignTaskForm.tsx  Sidebar.css  Sidebar.tsx  TaskForm.tsx  TaskList.tsx
prioritask-frontend/src/context/: RoomContext.tsx  TaskUpdateContext.tsx
prioritask-frontend/src/pages/: CreateRoom.tsx  Dashboard.module.css  Dashboard.tsx  GroupedTasks.tsx  History.tsx  Profile.tsx  RewriteTitles.tsx  RoomTasks.tsx  Tags.tsx
prioritask-frontend/src/utils/: room.ts
prioritask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_AI.py  test_ai_stats.py  test_auth_endpoints.py  test_auth_service.py  test_config.py  test_get_task_history.py  test_history_filters.py  test_main.py  test_patch_task.py  test_patch_task_status.py  test_room_parent_filter.py  test_room_tasks.py  test_rooms.py  test_rooms_persistence.py  test_session.py  test_tags.py  test_task.py  test_task_assignment.py  test_task_edge_cases.py  test_task_intelligence.py  test_tasks_filters.py  test_update_task_no_changes.py  test_user_model.py  tests_delete_task.py  utils.py
tests/unit/: test_auth_service.py  test_update_task_no_changes.py  test_user_model.py
(+15 files in other folders)
