[project]
name = "prioritask"
version = "0.2.0-alpha"
requires-python = ">=3.11"

dependencies = [
  # ─── API ──────────────────────────────────────────────────────────────
  "fastapi~=0.115",
  "uvicorn[standard]~=0.30",
  "python-jose[cryptography]",

  # ─── ORM / BDs ────────────────────────────────────────────────────────
  "sqlmodel~=0.0.24",
  "aiosqlite~=0.21",          # driver async para SQLite

  # ─── Configuración & Seguridad ───────────────────────────────────────
  "pydantic-settings~=2.1",
  "python-jose[cryptography]~=3.3",   # JWT
  "passlib[bcrypt]==1.7.*",           # hashing de contraseñas

  # ─── IA / Background Jobs ────────────────────────────────────────────
  "sentence-transformers>=2.7.0",
  "celery[redis]~=5.4",
  "setfit",

  # ─── Miscelánea ────────────────────────────────clear──────────────────────
  "python-dotenv~=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest~=8.2",
  "pytest-cov~=5.0",
  "coverage~=7.5",
  "httpx~=0.27",
  "alembic~=1.13",
  "ruff",
  "email-validator",
  "pytest-asyncio"
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.coverage.report]
fail_under = 80

[tool.poetry]
package-mode = false

[tool.setuptools]
packages = ["app"]